# ml-data-pipeline

./: README.md  pyproject.toml  runner.py
assets/: one_file.json  two_file.json
ml_data_pipeline/: pipeline.py
